# web_agent

./: .gitignore  CMakeLists.txt  README.md
config/: agent.conf.example  agent_config.json  config.example.json
docs/: CROSS_PLATFORM.md  api_specification.md  config_specification.md
docs/diagrams/: SequenceDiogram.html  StateDiogram.html  UMLClassDiogram.html
docs/modules/: configuration_module.md  file_system_module.md  http_module.md  logging_module.md  task_execution_module.md
src/: main.cpp
src/ agent/: WebAgent.cpp  WebAgent.h
src/agent/: WebAgent.cpp  WebAgent.h
src/config/: Config.cpp  Config.h
src/http/: HttpClient.cpp  HttpClient.h
src/task/: Task.cpp  Task.h  TaskExecutor.cpp  TaskExecutor.h
src/utils/: Logger.cpp  Logger.h
structure/: README.md
structure/Diograms/: ComponetDiogram.html  SequenceDiogram.html  StateDiogram.html  UMLClassDiogram.html
structure/api/: api_specification.md
structure/config/: config_specification.md
structure/modules/: configuration_module.md  file_system_module.md  http_module.md  logging_module.md  task_execution_module.md
tests/: test_agent.cpp  test_config.cpp  test_http.cpp  test_logger.cpp  test_parser.cpp  test_task.cpp
